2013-10-06  Sam Weinig  <sam@webkit.org>

        Fix windows build.

        * platform/win/ClipboardUtilitiesWin.cpp:
        (WebCore::fragmentFromCFHTML):
        (WebCore::fragmentFromHTML):
        * platform/win/PasteboardWin.cpp:
        (WebCore::Pasteboard::writeRangeToDataObject):
        (WebCore::Pasteboard::writeSelection):

2013-10-05  Sam Weinig  <sam@webkit.org>

        CTTE: Thread references through markup.h
        https://bugs.webkit.org/show_bug.cgi?id=122403

        Reviewed by Darin Adler and Andreas Kling.

        Highlights:
        - Removed createFragmentFromMarkupWithContext(), it was unused.
        - Moved createFragmentFromNodes() into its one caller (in WebKit/mac)
        - Add a bunch more toFoo() overloads.

2013-10-06  Zan Dobersek  <zdobersek@igalia.com>

        [WebIDL] Annotate IDL interfaces under Source/WebCore/Modules/ with the OperationsNotDeletable attribute
        https://bugs.webkit.org/show_bug.cgi?id=122281

        Before changing the JSC bindings generator to enforce WebIDL operations to be configurable, all the
        interfaces are being annotated with the OperationsNotDeletable attribute. The attribute currently
        doesn't have any effect, but will keep the operations not configurable after the generator is modified
        to preserve the original behavior. The attribute will be removed from each interface after checking
        conformity with other browsers (in terms of configurability of operations of that interface) and the
        WebKit's existing test suites.

        This patch covers IDL interfaces under Source/WebCore/Modules/.

        * Modules/battery/BatteryManager.idl:
        * Modules/encryptedmedia/MediaKeySession.idl:
        * Modules/encryptedmedia/MediaKeys.idl:
        * Modules/gamepad/GamepadList.idl:
        * Modules/geolocation/Geolocation.idl:
        * Modules/indexeddb/IDBCursor.idl:
        * Modules/indexeddb/IDBDatabase.idl: