@@ -49,7 +49,7 @@ namespace WebCore {
 
     typedef int ExceptionCode;
 
-    class Worker final : public AbstractWorker, private WorkerScriptLoaderClient {
+    class Worker FINAL : public AbstractWorker, private WorkerScriptLoaderClient {
     public:
         static PassRefPtr<Worker> create(ScriptExecutionContext&, const String& url, ExceptionCode&);
         virtual ~Worker();
